[package]
name = "forecast"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossterm = "0.26"
indicatif = "0.17"
dotenv = "0.15"
tokio = { version = "1.0", features = ["full"] }
dialoguer = "0.10"
