[package]
name = "real-time-global-weather-tracker"
version = "0.1.0"
authors = ["K.S.Adithya <adikarks@gmail.com>"]
edition = "2021"
description = "A CLI-based weather forecasting app"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Firespiko/weather-forecast-app"
keywords = ["weather", "forecast", "cli"]
categories = ["command-line-utilities", "database"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossterm = "0.26"
indicatif = "0.17"
dotenv = "0.15"
tokio = { version = "1.0", features = ["full"] }
dialoguer = "0.10"

[[bin]]
name = "real-time-global-weather-tracker"
path = "src/bin/main.rs"